examples/iql/07_filters/11_complex_condition.iql
// Test: Complex filter conditions

.kg create test_complex_filt_n07t11
.kg use test_complex_filt_n07t11

+data[(1, 100, "active"), (2, 50, "inactive"), (3, 200, "active"), (4, 75, "active"), (5, 150, "inactive")]

// Complex: status = active AND value > 60 AND id < 5
complex(Id, Val, Status) <-
    data(Id, Val, Status),
    Status = "active",
    Val > 60,
    Id < 5

?complex(Id, Val, Status)

// Alternative conditions combined
alt(Id, Val, Status) <-
    data(Id, Val, Status),
    Val >= 100

?alt(Id, Val, Status)

.kg use default
.kg drop test_complex_filt_n07t11
